[package]
name = "dpist"
version = "0.1.0"
edition = "2024"
default-run = "tui"
publish = false

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
derive_more = { version = "2.1.1", features = ["display"] }
etherparse = "0.19.0"
hashbrown = "0.16.1"
pcap = "2.4.0"
pcap-file = "2.0.0"
pnet = "0.35.0"
rand = { version = "0.10.1", features = ["thread_rng"] }
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
syn = { version = "2.0.117", features = ["full"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "tui"
path = "src/bin/tui.rs"
